tests/neg-custom-args/captures/i21620.check
-- [E129] Potential Issue Warning: tests/neg-custom-args/captures/i21620.scala:5:6 -------------------------------------
5 |      x
  |      ^
  |      A pure expression does nothing in statement position
  |
  | longer explanation available when compiling with `-explain`
-- [E129] Potential Issue Warning: tests/neg-custom-args/captures/i21620.scala:14:4 ------------------------------------
14 |    x
   |    ^
   |    A pure expression does nothing in statement position
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i21620.scala:9:31 ----------------------------------------
9 |  val _: () -> () ->{x} Unit = f // error
  |                               ^
  |                               Found:    (f : () ->{x} () ->{x} Unit)
  |                               Required: () -> () ->{x} Unit
  |
  |                               Note that capability `f` cannot flow into capture set {}.
  |
  | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i21620.scala:20:33 ---------------------------------------
20 |  val _: () ->{} () ->{x} Unit = f   // error, but could be OK
   |                                 ^
   |                                 Found:    (f : () ->{x} () ->{x} Unit)
   |                                 Required: () -> () ->{x} Unit
   |
   |                                 Note that capability `f` cannot flow into capture set {}.
   |
   | longer explanation available when compiling with `-explain`
